src/style/Header.css
.MuiBox-root.header {
    width: 100%;
    height: auto;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    background-color: #3d3c4b;

    position: sticky;
    top: 0;
    z-index: 10;
}


.MuiToolbar-root.header-links {
    height: 100%;
    padding: 0;
    display: flex;
    flex-direction: row;
    justify-content: end;
}

.MuiToolbar-root.header-links .MuiButton-root {
    border-radius: 0;
    border: none;
    width: 100%;
    height: 100%;
    padding: 0 25px;
    background-color: #0000001a;

    transition: background-color 0.2s;
}

.MuiToolbar-root.header-links .MuiButton-root:hover {
    background-color: #00000040;
} 

.MuiMenuButton-root.header-profile-btn {
    border-radius: 0;
    padding: 0 30px;
    height: 100%;
    background-color: #0000001a;
    border: 0;

    transition: background-color 0.2s;
}

.MuiMenuButton-root.header-profile-btn:hover {
    background-color: #00000040;
}



img.logo, .MuiIconButton-root.logo {
    width: 50px;
    height: 50px;
    margin: 5px;
    border-radius: 100%;
}

.MuiIconButton-root.logo:hover {
    background-color: rgba(255, 255, 255, 0.1);
}

